--- a/assessment.html
+++ b/assessment.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>20cat09spiが作ったあなたのいいところ診断</title>
+  <meta name="twitter:card" content="summary" />
+  <meta property="og:url" content="https://kumo-kabe.github.io/assessment/assessment.html" />
+  <meta property="og:title" content="あなたのいいところ診断" />
+  <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" />
   <link rel="stylesheet" href="assessment.css">
+  <title>20cat09spiが作ったあなたのいいところ診断</title>
 </head>
 
 <body>
