--- a/assessment.html
+++ b/assessment.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="あなたのいいところ診断" />
   <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" />
   <link rel="stylesheet" href="assessment.css">
-  <title>20cat09spiが作ったあなたのいいところ診断</title>
+  <title>kumo-kabeが作ったあなたのいいところ診断</title>
 </head>
 
 <body>
